# riff-poster-sync

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yaml
k8s/: cronjob.yaml  vault-setup.sh
src/rifftrax_poster_sync/: __init__.py  __main__.py  catalog.py  cli.py  matcher.py  scraper.py  sync.py  sync_cache.py
src/rifftrax_poster_sync/backends/: base.py  emby.py
