[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rifftrax-poster-sync"
version = "0.1.0"
description = "Sync poster art from rifftrax.com to Emby, Plex, or Jellyfin"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "madavigo"},
]
keywords = ["rifftrax", "emby", "plex", "jellyfin", "poster", "media"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]

[project.scripts]
rifftrax-poster-sync = "rifftrax_poster_sync.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
